--- a/templates/base.html
+++ b/templates/base.html
@@ -25,9 +25,6 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/about/">About</a>
-                        </li>
                         <!-- Add more navigation links as needed -->
                     </ul>
                 </div>
@@ -42,7 +39,7 @@
 
         <!-- Footer content -->
         <footer class="mt-4">
-            <p>&copy; 2024 Your Website. All rights reserved.</p>
+            <p>&copy; 2024 Django Query Optimization. All rights reserved.</p>
         </footer>
     </div>
 
@@ -50,6 +47,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <!-- Example: <script src="{% static 'js/custom.js' %}"></script> -->
 </body>
 </html>
